-- 0.871 20##-##-## --
* [LB#841189] [LQ#698901] Add support for secure NMDC client to hub connections, port defaults to 411, requires nmdcs:// in URL (RoLex)
* Add support for secure hub address when available in public hublists (RoLex)

-- 0.870 2021-09-09 --
* Adaptively determine fastest TLS 1.3 ciphersuites (klondike)
* [L#1703150] Fix crash when closing NMDC hubs (emtee)
* [L#1909853] Allow the operating system to determine the best socket buffer sizes by default (maksis)
* Add option to exclude encrypted private messages from logs (emtee)
* [L#1445330] Allow CCPM on unencrypted ADC hubs (emtee)
* [L#1853692] Blacklist an unmaintained hublist server
* [L#1829064] Add new hublist server dcnf.github.io
* [L#1815377] Fix a bug that could keep files from hashing due to CRC errors when automatic .sfv checking is enabled (emtee)
* [L#1910274] Don't add incomplete TTH trees to hash database (cologic)
* [L#1649066] Don't share files/directories with non-UTF-8 names on Linux/macOS/BSDs (cologic)
* Fix GeoIP country in the Transfer View and Search window (emtee)
* Keep existing GeoIP files after an unsuccessful download (emtee)
* Update OpenSSL to version 1.1.1k
* Require TLS 1.2 or newer (currently only TLS 1.3)-based ADCS connections (cologic)
* "Require TLS ADC client-client connections" setting now on by default (poy)
* Drop support for SHA-1-based ciphersuites due to chosen-prefix collisions from https://sha-mbles.github.io/ (cologic)
* Disallow Diffie-Hellman keys smaller than 2048 bits to mitigate the Logjam attack (cologic)
* Update bzip2 to version 1.0.8
* Update MiniUPnPc to version 2.2.1
* Update Boost to version 1.72

-- 0.868 2018-11-12 --
* During the first run of a new DC++ release shipped with new default hublist servers the new addresses are automatically added
  to the existing setup (no manual reset/configuration needed anymore) (emtee)