@@ -64,7 +64,9 @@ private:
 	enum SupportFlags {
 		SUPPORTS_USERCOMMAND = 0x01,
 		SUPPORTS_NOGETINFO = 0x02,
-		SUPPORTS_USERIP2 = 0x04
+		SUPPORTS_USERIP2 = 0x04,
+		//0x08
+		SUPPORTS_TLS = 0x10
 	};
 
 	mutable CriticalSection cs;
