@@ -1,6 +1,7 @@
 -- 0.871 20##-##-## --
 * [LB#841189] [LQ#698901] Add support for secure NMDC client to hub connections, port defaults to 411, requires nmdcs:// in URL (RoLex)
 * Add support for secure hub address when available in public hublists (RoLex)
+* Add support for secure NMDC client to client connections, requires successful TLS configuration on our side and specified TLS flag in remote user $MyINFO (RoLex)
 
 -- 0.870 2021-09-09 --
 * Adaptively determine fastest TLS 1.3 ciphersuites (klondike)
